@@ -2,7 +2,7 @@
 # Use Asqatasun with Docker
 
 ## Single container
-- This is a fat container, that is absolutly not compliant to [Docker best-practices](https://docs.docker.com/articles/dockerfile_best-practices/)
+- This is a fat container, that is absolutly not compliant to [Docker best-practices](https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/)
 - Don't use it for production as all data are wiped out at reboot / rebuild
 - BUT for quick testing, that does the job :)
 
