@@ -6,7 +6,7 @@ MAINTAINER Matthieu Faure <mfaure@asqatasun.org>
 #                      DISCLAIMER
 #
 # This is a fat container, that is absolutly not compliant to Docker best-practices
-# https://docs.docker.com/articles/dockerfile_best-practices/
+# https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/
 # Don't use it for production as all data are wiped out at reboot / rebuild
 # BUT for quick testing, that does the job :)
 #
